--- a/advance js/405-1/index.html
+++ b/advance js/405-1/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Countries Data</title>
     <link rel="icon" type="image/x-icon" href="./fevicon.jpg">
-    <link rel="stylesheet" href="./Style.css" />
+    <link rel="stylesheet" href="Style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
